fix: accessibility contrast issues

--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ p {
     font-weight: inherit;
     font-size: 10px;
     line-height: 2.2;
-    background-color: rgb(121, 131, 245);
+    background-color: #5762FF;
     color: white;
     letter-spacing: 1px;
     padding: 3px 10px;
